[gd_scene load_steps=3 format=2]

[ext_resource path="res://actor/Enemy/tank1/Laser.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 1.06763 )

[node name="Laser" type="Area2D"]
collision_layer = 16
collision_mask = 67
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( -33.2645, 0 )
scale = Vector2( 0.337428, 1 )
points = PoolVector2Array( 74.8738, 0, 122.291, 0 )
width = 2.0
default_color = Color( 0.4, 0.5, 2, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DestroyTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Laser_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
